--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,10 @@ a:hover{
   border-color: rgba(6, 0, 0, 0.1) rgba(6, 0, 0, 0.1) rgba(6, 0, 0, 0.25);
   background-color: #F50066;
   background-image: -moz-linear-gradient(center top , #FF0088, #AA0066);
+  background-image: -webkit-linear-gradient(top, #FF0088, #AA0066);
+  background-image: -o-linear-gradient(top, #FF0088, #AA0066);
+  background-image: linear-gradient(top, #FF0088, #AA0066);
+
   background-repeat: repeat-x;
   color:white;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
